--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,17 +10,13 @@
 @import "basics/layout";
 
 // COMPONENTS
-@import "components/main-header";
-@import "components/main-footer";
-@import "components/toy-filter";
-@import "components/toy-add";
-@import "components/toy-list";
-@import "components/toy-preview";
+@import "components/color-picker";
 
 // VIEWS
-@import "views/home";
-@import "views/about";
-@import "views/dashboard";
-@import "views/toy-app";
-@import "views/toy-details";
-@import "views/toy-edit";
+
+// @import "views/;
+// @import "views/;
+// @import "views/;
+// @import "views/;
+// @import "views/;
+// @import "views/;
