--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,10 +1,9 @@
 // COLOR PALETTE
 $clr1: #0077b6;
-$clr2: #f0f5f9;
-$clr3: #000c3e;
+$clr2: #f5f6f8;
+$clr3: #3f4045;
 $clr4: #60adf1;
 $clr5: #42b983;
-$clr6: #a9d6f6;
 
 // LAYOUT BREAKPOINTS
 $break-narrow: 460px;
