--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,12 +11,9 @@
 
 // COMPONENTS
 @import "components/color-picker";
+@import "components/task-preview";
 
 // VIEWS
 
-// @import "views/;
-// @import "views/;
-// @import "views/;
-// @import "views/;
-// @import "views/;
-// @import "views/;
+@import "views/board-details";
+
