--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -3,6 +3,12 @@
     margin-bottom: rem(20px);
 }
 
+.clean-list {
+    margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
 // Aspect ratios
 
 .ratio-16-9 { @include aspect-ratio(100, 56); }
