--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 // COMPONENTS
 @import "components/color-picker";
 @import "components/task-preview";
+@import "components/board-preview";
 
 // VIEWS
 
