--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -9,6 +9,16 @@
 	list-style-type: none;
 }
 
+.flex {
+    display: flex
+}
+
+.jc-center .ai-center .fd-column {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 // Aspect ratios
 
 .ratio-16-9 { @include aspect-ratio(100, 56); }
