--- a/src/styles/components/_board-list.scss
+++ b/src/styles/components/_board-list.scss
@@ -6,4 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    > * {
+        text-decoration: none;
+    }
 }
