--- a/src/styles/components/_board-preview.scss
+++ b/src/styles/components/_board-preview.scss
@@ -1,14 +1,6 @@
-* {
-    box-sizing: border-box;
-}
 
 .board-preview {
-
-    a {
-        text-decoration: none;
-
-        ::after {
-            color: inherit;
-        }
-    }
+    // > * {
+    //     text-decoration: none;
+    // }
 }
