--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import "components/task-preview";
 @import "components/board-preview";
 @import "components/board-list";
+@import "components/app-header";
 @import "components/group";
 
 // VIEWS
