--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -21,7 +21,15 @@
             overflow: hidden;
             text-overflow: ellipsis;
             padding-right: 30px;
+            cursor: pointer;
+            
+            
+            
+            
         }
+    }
+    &:hover {
+       background-color: #E6E9EF;
     }
 
     .members {
