--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -3,7 +3,7 @@ $clr1: #0077b6;
 $clr2: #f5f6f8;
 $clr3: #3f4045;
 $clr4: #60adf1;
-$clr5: #42b983;
+$clr5: #292f4c;
 
 // LAYOUT BREAKPOINTS
 $break-narrow: 460px;
