--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,18 +1,24 @@
-
-.main-header {
-    display: flex;
-    flex-direction: column;
+.header-component {
     height: 100%;
-    width: 66px;
-    --theme-box-shadow: 50,51,56;
-}
+    position: relative;
+    width: 116px;
+    background-color: rgb(63, 61, 61);
 
-.secondary-header {
-    color: #ffffff;
-    width: 50px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    --theme-box-shadow: 50,51,56;
+    .main-header {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 66px;
+        --theme-box-shadow: 50, 51, 56;
+    }
+
+    .secondary-header {
+        color: #ffffff;
+        width: 50px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        --theme-box-shadow: 50, 51, 56;
+    }
 }
