--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -1,4 +1,30 @@
 .board-details {
     background-color: white;
     min-height: 100vh;
+
+    .board-title-input,
+    .board-description-input {
+        border: 1px dashed transparent;
+        padding: 3px 7px 3px 0;
+        background-color: inherit;
+        color: $clr3;
+        font-size: 17px;
+    }
+
+    .board-title-input {
+        font-size: 25px;
+    }
+
+    .board-description-input {
+        min-width: 400px;
+    }
+
+    .created-by {
+        font-size: 15px;
+        cursor: pointer;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
