--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -19,6 +19,10 @@
     flex-direction: column;
 }
 
+.fd-column {
+    flex-direction: column;
+}
+
 // Aspect ratios
 
 .ratio-16-9 { @include aspect-ratio(100, 56); }
