--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,24 +1,20 @@
 .header-component {
-    height: 100%;
-    position: relative;
-    width: 116px;
-    background-color: rgb(63, 61, 61);
+    left: 0;
+    height: 100vh;
+    background-color: #292f4c;
+    z-index: 2;
 
     .main-header {
-        display: flex;
-        flex-direction: column;
         height: 100%;
-        width: 66px;
-        --theme-box-shadow: 50, 51, 56;
+        width: 4.0625rem;
+    }
     }
 
     .secondary-header {
-        color: #ffffff;
-        width: 50px;
         height: 100%;
-        display: flex;
-        flex-direction: column;
+        width: 3.125rem;
+        -webkit-border-start: 1px solid hsla(0,0%,100%,.2);
+        border-inline-start: 1px solid hsla(0,0%,100%,.2);
         align-items: center;
-        --theme-box-shadow: 50, 51, 56;
     }
-}
+
