--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,8 +1,10 @@
+
 .header-component {
     left: 0;
     height: 100vh;
     background-color: #292f4c;
     z-index: 2;
+    margin-right: 25px;
 
     .main-header {
         height: 100%;
