--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -2,7 +2,7 @@
 .header-component {
     left: 0;
     height: 100vh;
-    background-color: #292f4c;
+    background-color:$clr3;
     z-index: 2;
     margin-right: 25px;
 
