--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -25,8 +25,14 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            padding-right: 30px;
+            padding-right: 10px;
             cursor: pointer;
+        }
+        .el-icon-delete{
+            margin-right: 5px;
+        }
+        & i{
+            font-size: 10px;
         }
     }
     &:hover {
