--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -9,8 +9,17 @@
     .main-header {
         height: 100%;
         width: 4.0625rem;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+
+        .el-icon-s-grid {
+            font-size: 20px;
+            color: white;
+        }
     }
-    }
+    
 
     .secondary-header {
         height: 100%;
@@ -19,4 +28,4 @@
         border-inline-start: 1px solid hsla(0,0%,100%,.2);
         align-items: center;
     }
-
+}
