added add task input field + verticaly centering task-preview

--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -13,6 +13,12 @@
     display: flex
 }
 
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .jc-center .ai-center .fd-column {
     justify-content: center;
     align-items: center;
