--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -1,6 +1,7 @@
 .task-preview{
     display: flex;
-    max-height: 34px;
+    // max-height: 34px;
+    height: 35px;
     background-color: $clr2;
     margin-bottom: .0625rem;
     border-radius: 1px;
