--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -19,5 +19,27 @@
             color: $clr3;
             font-size: 20px;
         }
+
+        .group-edit {
+            position: absolute;
+            width: 150px;
+            z-index: 5;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 3px;
+            box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 30%), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
+            font-size: 14px;
+            transform: translate(12px, 40px);
+
+            > * {
+                text-align: left;
+                cursor: pointer;
+                padding: 3px 1px;
+
+                &:hover {
+
+                }
+            }
+        }
     }
 }
