--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -51,8 +51,12 @@
                 cursor: pointer;
                 padding: 3px 1px;
 
-                &:hover {
+                i {
+                    margin-right: 7px;
+                }
 
+                &:hover {
+                    background-color: rgb(246, 246, 246);
                 }
             }
         }
