fixed icons in preview

--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -32,8 +32,8 @@
         .el-icon-delete{
             margin-right: 5px;
         }
-        & i{
-            font-size: 10px;
+        .el-icon-delete, .el-icon-edit{
+            font-size: 11px;
         }
     }
     &:hover {
