added svg for color picker

--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -1,6 +1,11 @@
 .group {
     padding-bottom: 50px;
 
+    .color-palette{
+        width: 16px;
+        color: 63 64 69;
+    }
+
     .input-add-task{
         height: 35px;
         width: 100%;
