--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -12,11 +12,12 @@
         align-items: center;
         padding: 10px;
 
-        .header-icon {
+        i {
             font-size: 20px;
             color: white;
         }
 
+        
         .top-icon-wrapper {
             flex-direction: column;
             justify-content: space-evenly;
