--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -3,6 +3,10 @@
     min-height: 100vh;
     display: flex;
 
+    .btn-add-group {
+        margin: 20px 0;
+    }
+
     .details-wrapper {
         width: 100%;
         padding: 0 30px;
