--- a/src/styles/views/_user-profile.scss
+++ b/src/styles/views/_user-profile.scss
@@ -1,13 +1,34 @@
 .top {
     background-color: $clr1;
     height: 50vh;
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: $clr2;
 
     .el-avatar {
-        font-size: large;
+        height: 150px;
+        width: 150px;
+        font-size: 70px;
+        line-height: 150px;
+    }
+}
+
+.bottom {
+    background-color: $clr3;
+    height: 50vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .user-boards {
+        width: 250px;
+    }
+
+    .user-tasks {
+        width: 250px;
     }
 }
