--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -3,6 +3,7 @@
     min-height: 100vh;
     display: flex;
 
+
     .btn-add-group {
         margin: 20px 0;
     }
@@ -10,6 +11,7 @@
     .details-wrapper {
         width: 100%;
         padding: 0 30px;
+        border-top-left-radius: 10px;
     }
 
     .board-title-input,
