--- a/src/styles/views/_user-profile.scss
+++ b/src/styles/views/_user-profile.scss
@@ -1,34 +1,66 @@
-.top {
-    background-color: $clr1;
-    height: 50vh;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: $clr2;
-
-    .el-avatar {
-        height: 150px;
-        width: 150px;
-        font-size: 70px;
-        line-height: 150px;
-    }
-}
-
-.bottom {
-    background-color: $clr3;
-    height: 50vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .user-boards {
-        width: 250px;
+.user-profile-main-container {
+    width: auto;
+    .profile-container {
+        
     }
 
-    .user-tasks {
-        width: 250px;
+    .top {
+        background-color: $clr1;
+        height: 50vh;
+        border-top-left-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: $clr2;
+        padding: 0 30px;
+
+        .el-avatar {
+            height: 150px;
+            width: 150px;
+            font-size: 70px;
+            line-height: 150px;
+        }
+    }
+
+    .bottom {
+        background-color: $clr3;
+        height: 50vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        color: $clr2;
+        padding: 0 30px;
+
+        h2 {
+            color: black;
+            font-weight: bolder;
+        }
+
+        .user-boards {
+            width: 250px;
+        }
+
+        .user-tasks {
+            width: 250px;
+        }
+        .user-details {
+            width: 250px;
+        }
+
+        .el-icon-user-solid {
+            height: 20px;
+            color: black;
+        }
+
+        .el-icon-message {
+            height: 20px;
+            color: black;
+        }
+
+        h3 span {
+            color: black;
+            font-weight: bolder;
+        }
     }
 }
