--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "components/board-list";
 @import "components/app-header";
 @import "components/group";
+@import "components/task-members";
 
 // VIEWS
 
