added users avatars cmp

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
 
 // COMPONENTS
 @import "components/color-picker";
+@import "components/users-avatars";
 @import "components/task-preview";
 @import "components/board-preview";
 @import "components/board-list";
