--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -17,10 +17,8 @@
             color: white;
         }
 
-        .top-icon-wrapper {
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
+        .logo {
+            width: 25px;
         }
 
         .header-avatar {
