--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -5,25 +5,48 @@
     z-index: 2;
 
     .main-header {
-        height: 100%;
         width: 4.0625rem;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         padding: 10px;
 
+        > * {
+            flex-direction: column;
+        }
+
+        .top-header {
+            > *:not(:first-child) {
+                padding: 10px 0;
+            }
+
+            .logo {
+                width: 25px;
+            }
+        }
+
+        .bottom-header {
+            > * {
+                padding: 10px 0;
+            }
+
+            .header-avatar {
+                cursor: pointer;
+                border: 2px solid white;
+            }
+
+            .exit {
+                width: 25px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
         i {
-            font-size: 20px;
+            font-size: 25px;
             color: white;
-        }
-
-        .logo {
-            width: 25px;
-        }
-
-        .header-avatar {
-            cursor: pointer;
-        }
+        }  
     }
 
     .secondary-header {
