--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -1,5 +1,5 @@
 .board-details {
-    background-color: white;
+    background-color: $clr5;
     min-height: 100vh;
     display: flex;
 
@@ -40,6 +40,7 @@
         width: 100%;
         padding: 0 30px;
         border-top-left-radius: 10px;
+        background-color: #fff;
     }
 
     .board-title-input,
