--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,7 @@
 @import "components/app-header";
 @import "components/group";
 @import "components/home-page-header";
+@import "components/task-members";
 
 // VIEWS
 
