--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -11,6 +11,7 @@
     color: $clr3;
     font-size: .8125rem;
     justify-content: space-between;
+    position: relative  !important;
 
     &:hover {
         background-color: #E6E9EF;
