--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,9 +1,9 @@
 // COLOR PALETTE
-$clr1: #0077b6;
-$clr2: #f5f6f8;
-$clr3: #3f4045;
-$clr4: #60adf1;
-$clr5: #292f4c;
+$clr1: #0077b6; 
+$clr2: #f5f6f8; //Row Color
+$clr3: #3f4045; // Text Color
+$clr4: #E6E9EF; //On Hover
+$clr5: #292f4c; 
 
 // LAYOUT BREAKPOINTS
 $break-narrow: 460px;
