--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -1,24 +1,24 @@
 .task-members {
-    position: relative;
+    position: absolute;
+    transform: translate(-110px, 18px);
+    cursor: pointer;
 
+    
     .task-members-list {
         flex-direction: column;
         position: absolute;
         width: 200px;
-        z-index: 5;
         background-color: #fff;
-        padding: 5px;
         border-radius: 3px;
         box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
         font-size: 14px;
-        transform: translate(12px, 40px);
-
+        
         .task-member {
+            padding: 5px;
             justify-content: space-between;
-            .task-member-name {
-            }
-
-            .task-member-subtract {
+            
+            &:hover {
+                background-color: $clr4
             }
         }
     }
