--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -1,25 +1,21 @@
-.task-members {
-    position: absolute;
+.task-members-list {
     transform: translate(-110px, 18px);
     cursor: pointer;
+    flex-direction: column;
+    position: absolute;
+    width: 200px;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
+    font-size: 14px;
 
-    
-    .task-members-list {
+    .task-member {
         flex-direction: column;
-        position: absolute;
-        width: 200px;
-        background-color: #fff;
-        border-radius: 3px;
-        box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
-        font-size: 14px;
-        
-        .task-member {
-            padding: 5px;
-            justify-content: space-between;
-            
-            &:hover {
-                background-color: $clr4
-            }
+        padding: 5px;
+        justify-content: space-between;
+
+        &:hover {
+            background-color: $clr4;
         }
     }
 }
