--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @import "components/group";
 @import "components/home-page-header";
 @import "components/task-members";
+@import "components/task-status";
 
 // VIEWS
 
@@ -26,4 +27,3 @@
 @import "views/board";
 @import "views/user-profile";
 @import "views/home-page";
-
