--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -1,6 +1,5 @@
 .task-preview {
     display: flex;
-    // max-height: 34px;
     height: 35px;
     background-color: $clr2;
     margin-bottom: .0625rem;
@@ -22,11 +21,15 @@
 
     > *:not(.main-task ) {
         width: 9.375rem;
-        padding: 0 10px;
         height: 35px;
         display: flex;
         align-items: center;
         justify-content: center
+    }
+
+    .date-picker-container,
+    .members-container {
+        padding: 0 10px;
     }
 
     .status,
