--- a/src/styles/components/_task-status.scss
+++ b/src/styles/components/_task-status.scss
@@ -1,11 +1,11 @@
 .status-modal {
     position: absolute;
-    transform: translate(170%, 70%);
+    transform: translate(0, 59%);
     
     .status-list {
-        width: 150px;
+        width: 9.375rem;
         top: 40px;
-        padding: 0 5px 10px;
+        padding: 5px 10px;
         z-index: 5;
         box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
         border-radius: 3px;
@@ -15,7 +15,6 @@
     .label {
         margin: 5px;
         padding: 10px;
-        border-color: $clr1;
     }
 
     .input-add-status {
