--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -77,5 +77,18 @@
                 }
             }
         }
+
+        .color-picker {
+            position: absolute;
+            transform: translate(150%, 70%);
+            width: 100px;
+            padding: .2em;
+            border-radius: 3px;
+            background-color: #fff;
+            box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
+            cursor: default;
+            transition: .5s;
+            z-index: 5;
+        }
     }
 }
