--- a/src/styles/components/_task-status.scss
+++ b/src/styles/components/_task-status.scss
@@ -13,12 +13,19 @@
     }
 
     .label {
-        margin: 5px;
+        margin: 5px 0;
         padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        i {
+            font-size: 13px;
+        }
     }
 
     .input-add-status {
-        margin: 5px;
+        margin: 5px 0;
         padding: 10px;
         border-color: $clr1;
         border: none;
