--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,6 +20,7 @@
 @import "components/home-page-header";
 @import "components/task-members";
 @import "components/task-status";
+@import "components/status-bar";
 
 // VIEWS
 
