--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,7 @@
 @import "components/task-members";
 @import "components/task-status";
 @import "components/status-bar";
+@import "components/task-priority";
 
 // VIEWS
 
