--- a/src/styles/components/_status-bar.scss
+++ b/src/styles/components/_status-bar.scss
@@ -1,3 +1,37 @@
 .status-bar-wrapper{
   display: flex;
-}
+  width: 150px;
+  height: 25px;
+  transform: translateX(50%);
+  
+  .part-of-bar:hover{
+      transition: transform .4s;
+      transform: scale(1.2);
+
+    }
+    [data-title]:hover:after {
+      opacity: 1;
+      transition: all 0.1s ease 0.5s;
+      visibility: visible;
+  }
+  [data-title]:after {
+      content: attr(data-title);
+      background-color: $clr2;
+      color: $clr1;
+      // font-size: 100%;
+      position: absolute;
+      padding: 1px 5px 2px 5px;
+      bottom: -1.6em;
+      left: 100%;
+      white-space: nowrap;
+      box-shadow: 1px 1px 3px #222222;
+      opacity: 0;
+      border: 1px solid #111111;
+      z-index: 99999;
+      visibility: hidden;
+  }
+  [data-title] {
+      position: relative;
+  }
+  }
+  
