--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -8,6 +8,7 @@
     border-radius: 3px;
     box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
     font-size: 14px;
+    z-index: 10;
 
     .line-separator-members{
         width:85%;
