--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -6,6 +6,7 @@
     .board-static-header{
         position: sticky;
         top: 0;
+        z-index: 100;
         background-color: white;
     }
 
