--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,6 +23,8 @@
 @import "components/status-bar";
 @import "components/priority-bar";
 @import "components/task-priority";
+@import "components/task-update";
+@import "components/task-details";
 
 // VIEWS
 
