--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -19,7 +19,10 @@
         }
     }
 
-    > *:not(.main-task ) {
+    .members-container,
+    .status-container,
+    .date-picker-container,
+    .priority-container {
         width: 9.375rem;
         height: 35px;
         display: flex;
