--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -13,6 +13,12 @@
     display: flex
 }
 
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .flex-center{
     display: flex;
     justify-content: center;
