--- a/src/styles/components/_task-details.scss
+++ b/src/styles/components/_task-details.scss
@@ -10,5 +10,21 @@
     text-align: left;
     padding: 5px 20px;
     box-shadow: 0 0 10px 0 $clr5;
-    overflow-y: scroll;
+    // overflow-y: scroll;
+
+    .task-title {
+        font-size: 20px;
+        font-weight: bolder;
+        padding: 15px 0;
+    }
+
+    .btns-container {
+        margin-bottom: 15px;
+
+        > * {
+            font-size: 15px;
+            margin-right: 10px;
+            cursor: pointer;
+        }
+    }
 }
