--- a/src/styles/components/_task-update.scss
+++ b/src/styles/components/_task-update.scss
@@ -1,7 +1,4 @@
 .update-container {
-    > * {
-    }
-    
     .comment-content {
         border: 1px solid $clr4;
         border-radius: 5px;
@@ -40,4 +37,17 @@
             }
         }
     }
+
+    form {
+        margin-bottom: 15px;
+
+        .update-input {
+            margin-bottom: 15px;
+        }
+
+        .file-btn {
+            cursor: pointer;
+        }
+    }
+
 }
