--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -60,6 +60,11 @@
             text-overflow: ellipsis;
             padding-right: 10px;
             cursor: pointer;
+            border: none;
+            width: rem(300px);
+            background-color: $clr2;
+
+        
         }
         .el-icon-delete{
             margin-right: 5px;
