--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,7 @@
 @import "components/task-priority";
 @import "components/task-update";
 @import "components/task-details";
+@import "components/task-activity";
 
 // VIEWS
 
