--- a/src/styles/components/_task-details.scss
+++ b/src/styles/components/_task-details.scss
@@ -20,6 +20,8 @@
 
     .btns-container {
         margin-bottom: 15px;
+        padding-bottom: 5px;
+        border-bottom: 1px solid $clr4;
 
         > * {
             font-size: 15px;
