--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -37,6 +37,32 @@
                 text-decoration: underline;
             }
         }
+
+        .add-view-card {
+            flex-direction: column;
+            position: absolute;
+            width: 150px;
+            z-index: 5;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 3px;
+            box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
+            font-size: 14px;
+            // transform: translate(12px, 40px);
+            > * {
+                text-align: left;
+                cursor: pointer;
+                padding: 3px 1px;
+
+                img {
+                    margin-right: 10px;
+                }
+
+                &:hover {
+                    background-color: rgb(246, 246, 246);
+                }
+            }
+        }
     }
 
     .board-top-row{
