--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -49,11 +49,10 @@
         width: 130px;
     }
 
-    .main-task {
+    .task-left-container {
         display: flex;
         justify-content: space-between;
-        width: 350px;
-        min-width: 200px;
+        width: 100%;
         .task-title {
             white-space: nowrap;
             overflow: hidden;
@@ -63,8 +62,6 @@
             border: none;
             width: rem(300px);
             background-color: $clr2;
-
-        
         }
         .el-icon-delete{
             margin-right: 5px;
@@ -74,8 +71,13 @@
         }
     }
 
+    .task-right-container {
+        min-width: 700px;
+        display: flex;
+        justify-content: space-between;
+    }
+
     .members {
-        // position: relative;
         display: flex;
         cursor: pointer;
     }
