--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -53,6 +53,14 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+
+        .remove-title-wrapper {
+            width: 100%;   
+            
+            form{
+                width:100%
+            }
+        }
         .task-title {
             white-space: nowrap;
             overflow: hidden;
@@ -60,7 +68,7 @@
             padding-right: 10px;
             cursor: pointer;
             border: none;
-            width: rem(300px);
+            width: 100%;
             background-color: $clr2;
         }
         .el-icon-delete{
