--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -28,6 +28,9 @@
         
         .group-header-right {
             min-width: 700px;
+            display: flex;
+            justify-content: space-between;
+            padding-right: .625rem;
             > * {
                 padding: 0 10px;
                 font-size: 15px;
@@ -37,12 +40,11 @@
 
         .group-header-left {
             width: 100%;
-            .dowm-arrow-btn {
+            .down-arrow-container {
                 width: 15px;
                 display: flex;
                 align-items: center;
-                margin-right: 5px;
-                fill: aqua !important;
+                margin-right: 10px;
             }
 
             .group-title-input {
@@ -59,7 +61,7 @@
         > *:not(.color-picker){
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            // justify-content: space-between;
         }
 
         
