--- a/src/styles/components/_task-priority.scss
+++ b/src/styles/components/_task-priority.scss
@@ -1,6 +1,8 @@
 .priority-modal {
     position: absolute;
     transform: translate(0, 56.5%);
+    z-index: 1;
+
     
     .priority-list {
         width: 9.375rem;
