--- a/src/styles/components/_task-status.scss
+++ b/src/styles/components/_task-status.scss
@@ -1,6 +1,8 @@
 .status-modal {
     position: absolute;
     transform: translate(0, 56.5%);
+    z-index: 1;
+
     
     .status-list {
         width: 9.375rem;
