--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -11,6 +11,8 @@ html {
 body {
 	margin: 0;
 	background-color: $clr2;
+	overflow-x: hidden;
+	  
 	// background-image: url('~@/assets/images/cats-pattern-background_1425-90.jpg');
 	// background-size: 180px;
 	// background-attachment: fixed;
