--- a/src/styles/components/_task-status.scss
+++ b/src/styles/components/_task-status.scss
@@ -21,6 +21,7 @@
         justify-content: space-between;
         align-items: center;
         background-color: $clr2;
+        cursor: pointer;
 
         &:hover {
             background-color: $clr4;
