--- a/src/styles/components/_task-priority.scss
+++ b/src/styles/components/_task-priority.scss
@@ -24,11 +24,15 @@
 
         &:hover {
             background-color: $clr4;
+
+            i{
+                opacity:1;
+            }
         }
 
         i {
             font-size: 13px;
-        }
+            opacity: 0; }
     }
 
     .input-add-priority {
