--- a/src/styles/components/_task-status.scss
+++ b/src/styles/components/_task-status.scss
@@ -21,14 +21,21 @@
         justify-content: space-between;
         align-items: center;
         background-color: $clr2;
+        
+        i {
+            font-size: 13px;
+            opacity: 0;
+        }
 
         &:hover {
             background-color: $clr4;
+            
+            i{
+                opacity: 1; 
+            }
         }
 
-        i {
-            font-size: 13px;
-        }
+        
     }
 
     .input-add-status {
