--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -52,13 +52,23 @@
             color: white;
             cursor: pointer;
         }
-          
     }
 
     .secondary-header {
-        transition: 0.3s;
+
+        .header-shown {
+            width: 15.937rem;
+        }
+
+        .header-not-shown {
+            width: 0;
+        }
+
+        box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
+        background-color: #fff;
+        border-top-left-radius: 10px;
+        border-left: black 1px solid;
         height: 100%;
-        width: 3.125rem;
         -webkit-border-start: 1px solid hsla(0, 0%, 100%, 0.2);
         border-inline-start: 1px solid hsla(0, 0%, 100%, 0.2);
         align-items: center;
