--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -53,19 +53,11 @@
             cursor: pointer;
         }
     }
-
+    
     .secondary-header {
-
-        .header-shown {
-            width: 15.937rem;
-        }
-
-        .header-not-shown {
-            width: 0;
-        }
-
+        transition: 0.3s;
         box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
-        background-color: #fff;
+        background-color: $clr5;
         border-top-left-radius: 10px;
         border-left: black 1px solid;
         height: 100%;
@@ -73,4 +65,13 @@
         border-inline-start: 1px solid hsla(0, 0%, 100%, 0.2);
         align-items: center;
     }
+    .header-not-shown {
+        width: 0;
+        background-color: $clr5;
+    }
+    .header-shown {
+        width: 15.937rem;
+        background-color: #fff;
+    }
+    
 }
