--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -12,15 +12,42 @@
         .board-title-input,
         .board-description-input {
             border: 1px dashed transparent;
-            padding: 3px 7px 3px 0;
             background-color: inherit;
             color: $clr3;
             font-size: 17px;
         }
+        
 
-        .board-title-input {
-            font-size: 25px;
+        .board-top-row{
+            padding-top: 20px;  
+            padding-bottom: 10px;  
+
+            .board-title-input {
+                font-size: 25px;
+                width: 100%;
+            }
+    
+            .board-btns {
+                > * {
+                    height: 100%;
+                    cursor: pointer;
+                    border-radius: 4px;
+    
+                    &:hover {
+                        background-color: $clr4;
+                    }
+                }
+    
+                > *:not(:last-child) {
+                    padding: 0 10px;
+                }
+    
+                > *:last-child {
+                    padding-left: 10px;
+                }
+            }
         }
+
     
         .board-description-input {
             min-width: 400px;
@@ -63,10 +90,6 @@
                 }
             }
         }
-    }
-
-    .board-top-row{
-        height: 70px;    
     }
 
     .add-view-card{
