--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -56,7 +56,7 @@
     
     .secondary-header {
         background-color: $clr5;
-        transition: width 0.3s;
+        transition: 0.3s;
         box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
         border-top-left-radius: 10px;
         border-left: black 1px solid;
@@ -64,6 +64,21 @@
         -webkit-border-start: 1px solid hsla(0, 0%, 100%, 0.2);
         border-inline-start: 1px solid hsla(0, 0%, 100%, 0.2);
         align-items: center;
+        flex-direction: column;
+
+        .sidebar-board-prev {
+            display: flex;
+            flex-direction: column;
+
+            .change-board {
+                color: $clr3;
+                font-weight: bolder;
+            }
+
+            .mini-board-prev {
+                border-bottom: 1px solid $clr4;
+            }
+        }
     }
     .header-not-shown {
         background-color: $clr5;
