--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -77,6 +77,7 @@
 
             .mini-board-prev {
                 border-bottom: 1px solid $clr4;
+                cursor: pointer;
             }
         }
     }
