--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -1,16 +1,15 @@
-
 .site-block {
     margin-bottom: rem(20px);
 }
 
 .clean-list {
     margin: 0;
-	padding: 0;
-	list-style-type: none;
+    padding: 0;
+    list-style-type: none;
 }
 
 .flex {
-    display: flex
+    display: flex;
 }
 
 .flex-between {
@@ -19,7 +18,7 @@
     align-items: center;
 }
 
-.flex-center{
+.flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,12 +35,33 @@
     flex-direction: column;
 }
 
+.router-link {
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+        text-decoration: underline;
+    }
+
+    &:active {
+        color: inherit;
+    }
+}
+
 // Aspect ratios
 
-.ratio-16-9 { @include aspect-ratio(100, 56); }
+.ratio-16-9 {
+    @include aspect-ratio(100, 56);
+}
 
-.ratio-square { @include aspect-ratio(100, 100); }
+.ratio-square {
+    @include aspect-ratio(100, 100);
+}
 
-.ratio-card { @include aspect-ratio(100, 80); }
+.ratio-card {
+    @include aspect-ratio(100, 80);
+}
 
-.ratio-poster { @include aspect-ratio(100, 150); }
+.ratio-poster {
+    @include aspect-ratio(100, 150);
+}
