--- a/src/styles/components/_task-details.scss
+++ b/src/styles/components/_task-details.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     width: 570px;
     z-index: 101;
-    transition: .5s;
+    transition: 0.5s;
     text-align: left;
     padding: 5px 20px;
     box-shadow: 0 0 10px 0 $clr5;
@@ -16,8 +16,7 @@
         font-size: 20px;
         font-weight: bolder;
         padding: 15px 0;
-    
-       }
+    }
 
     .btns-container {
         margin-bottom: 15px;
