added screen with opacity for chat

--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -11,6 +11,10 @@
     font-size: .8125rem;
     justify-content: space-between;
 
+    .btn-chat{
+        cursor: pointer;
+    }
+
     &:hover {
         background-color: #E6E9EF;
 
