--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -3,6 +3,25 @@
     min-height: 100vh;
     display: flex;
 
+    
+    .main-screen {
+        z-index: 150;
+        position: fixed;
+        opacity: 1;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, 0.300);
+        cursor: pointer;
+        transition: opacity .8s;
+    }
+    
+    .main-screen-hidden{
+        opacity: 0;
+        // transition: opacity .8s;
+    }
+
     .board-static-header{
         position: sticky;
         top: 0;
