added drag drop to groups

--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -47,8 +47,8 @@
                 margin-right: 10px;
                 cursor: pointer;
               
-                svg:hover{
-                    opacity: 0.6;	             
+                .down-arrow-regular:hover{
+                    opacity: 0.6;  
                  }
             }
 
