--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -10,6 +10,10 @@
     font-size: 14px;
     z-index: 10;
 
+    .members-search{
+        pointer-events: none;
+    }
+
     .line-separator-members{
         width:85%;
         height:1px;
