--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -1,6 +1,5 @@
 .task-members-list {
     transform: translate(-3%, 54%);
-    cursor: pointer;
     flex-direction: column;
     position: absolute;
     width: 200px;
@@ -9,9 +8,10 @@
     box-shadow: 0 1px 2px 0 rgba(159, 159, 160, 0.3), 0 1px 3px 1px rgba(149, 152, 153, 0.15);
     font-size: 14px;
     z-index: 10;
-
+    
     .members-search{
-        pointer-events: none;
+        position: relative;
+        // pointer-events: none;
     }
 
     .line-separator-members{
@@ -32,6 +32,7 @@
     .task-member {
         padding: 5px;
         justify-content: space-between;
+        cursor: pointer;
 
         &:hover {
             background-color: $clr4;
