--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -53,7 +53,7 @@
             cursor: pointer;
         }
     }
-    
+
     .secondary-header {
         background-color: $clr5;
         transition: 0.3s;
@@ -84,10 +84,12 @@
     .header-not-shown {
         background-color: $clr5;
         width: 0;
+
     }
     .header-shown {
         background-color: #fff;
         width: 15.937rem;
+        // backface-visibility: hidden;
+
     }
-    
 }
