--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -2,7 +2,6 @@
     background-color: $clr5;
     min-height: 100vh;
     display: flex;
-
     
     .main-screen {
         z-index: 150;
@@ -15,6 +14,10 @@
         background-color: rgba(0, 0, 0, 0.300);
         cursor: pointer;
         transition: opacity .8s;
+    }
+
+    .screen-fixed{
+        position: fixed;
     }
     
     .main-screen-hidden{
