--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -4,6 +4,8 @@ $clr2: #f5f6f8; //Row Color
 $clr3: #3f4045; // Text Color
 $clr4: #E6E9EF; //On Hover
 $clr5: #292f4c; 
+$clr6: #a7a8ab; //border for clickable fields to edit 
+
 
 // LAYOUT BREAKPOINTS
 $break-narrow: 460px;
