--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -39,13 +39,13 @@
     text-decoration: none;
     color: inherit;
 
-    &:hover {
-        text-decoration: underline;
-    }
+    // &:hover {
+    //     text-decoration: underline;
+    // }
 
-    &:active {
-        color: inherit;
-    }
+    // &:active {
+    //     color: inherit;
+    // }
 }
 
 // Aspect ratios
