--- a/src/styles/views/_user-profile.scss
+++ b/src/styles/views/_user-profile.scss
@@ -7,7 +7,7 @@
 
     .top {
         background-color: $clr1;
-        height: 50vh;
+        height: 35vh;
         border-top-left-radius: 10px;
         display: flex;
         justify-content: center;
@@ -21,16 +21,47 @@
             width: 150px;
             font-size: 70px;
             line-height: 150px;
+            margin-bottom: 20px;
+            border: 3px solid $clr2;
+        }
+    }
+
+    .bottom-guest {
+        background-color: $clr4;
+        color: $clr5;
+        height: 65vh;
+        flex-direction: column;
+        font-size: 20px;
+        font-weight: bold;
+
+        > * {
+            margin-bottom: 40px;
+            
+            &:first-child {
+                font-size: 30px;
+            }
+        }
+
+        .signup-btn {
+            font-size: 15px;
+            background-color: $clr5;
+            color: $clr4;
+
+            &:hover {
+                background-color: $clr4;
+                color: $clr5;
+                border-color: $clr5;
+            }
         }
     }
 
     .bottom {
-        background-color: $clr3;
-        height: 50vh;
+        background-color: $clr2;
+        height: 65vh;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        color: $clr2;
+        color: $clr3;
 
         h2 {
             color: black;
