--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -38,6 +38,8 @@
 .router-link {
     text-decoration: none;
     color: inherit;
+    padding: 5px;
+    margin: 2px
 
     // &:hover {
     //     text-decoration: underline;
