--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -31,7 +31,8 @@
         height: 35px;
         display: flex;
         align-items: center;
-        justify-content: center
+        justify-content: center;
+        cursor: pointer
     }
 
     .date-picker-container{
